--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.github.aecsocket.himom">
+      package="com.github.aecsocket.player">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:name=".App"
+        android:name="com.github.aecsocket.player.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HiMom">
+        android:theme="@style/Base">
         <activity
-            android:name=".MainActivity"
+            android:name="com.github.aecsocket.player.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,13 +25,13 @@
         </activity>
 
         <service
-            android:name=".MediaService"
+            android:name="com.github.aecsocket.player.MediaService"
             android:exported="false"
             android:foregroundServiceType="mediaPlayback">
         </service>
 
         <activity
-            android:name=".RouterActivity"
+            android:name="com.github.aecsocket.player.RouterActivity"
             android:excludeFromRecents="true"
             android:exported="true">
 
