--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,9 @@ dependencies {
     implementation 'com.google.android.exoplayer:extension-mediasession:2.17.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation "androidx.fragment:fragment-ktx:1.4.1"
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -60,7 +61,7 @@ dependencies {
     //implementation 'com.google.dagger:hilt-android:2.38.1'
     //kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
 
-    implementation 'com.github.TeamNewPipe:NewPipeExtractor:v0.21.14'
+    implementation 'com.github.TeamNewPipe:NewPipeExtractor:v0.22.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
