Basic preferences, fade on play/pause

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
 
         <activity android:name="com.github.aecsocket.player.ErrorActivity" />
 
+        <activity android:name="com.github.aecsocket.player.SettingsActivity" />
+
         <service
             android:name="com.github.aecsocket.player.MediaService"
             android:exported="false"
