--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,8 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.media:media:1.5.0'
+    implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation 'androidx.media:media:1.6.0'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.17.1'
     implementation 'com.google.android.exoplayer:extension-mediasession:2.17.1'
